Update script and slides

--- a/slides.html
+++ b/slides.html
@@ -12,7 +12,7 @@
 
   <meta name="author" content="Claudiu Forgaci">
   <meta name="dcterms.date" content="2024-03-20">
-  <title>Mining Dutch media about farming communities</title>
+  <title>Farming communities in Dutch media</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -328,7 +328,7 @@
     <div class="slides">
 
 <section id="title-slide" class="quarto-title-block center">
-  <h1 class="title">Mining Dutch<br>media about farming communities</h1>
+  <h1 class="title">Farming communities<br>in Dutch media</h1>
   <p class="subtitle">A Topic Modeling Approach using R</p>
 
 <div class="quarto-title-authors">
@@ -344,8 +344,8 @@ Claudiu Forgaci
 <section id="workshop-outline" class="slide level2 smaller">
 <h2>Workshop outline</h2>
 <ol type="1">
-<li>Tutorial: Finding topics in Dutch news</li>
 <li>Tutorial: How to get your own data from social media? (Shuyu Zhang)</li>
+<li>Tutorial: Finding topics in Dutch news</li>
 <li>Exercise: Topic modeling with your own data</li>
 </ol>
 </section>
@@ -387,7 +387,7 @@ Claudiu Forgaci
 </section>
 <section id="the-method" class="slide level2">
 <h2>The method</h2>
-<p>Topic modeling using LDA as a way to reveal latent.</p>
+<p>Topic modeling using LDA as a way to reveal latent topics inunstructured text data.</p>
 <ul>
 <li>documents are a mixture of topics</li>
 <li>topics are a mixture of words</li>
