--- a/script.html
+++ b/script.html
@@ -100,6 +100,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <li><a href="#pre-processing" id="toc-pre-processing" class="nav-link" data-scroll-target="#pre-processing">Pre-processing</a></li>
   <li><a href="#text-analysis" id="toc-text-analysis" class="nav-link" data-scroll-target="#text-analysis">Text analysis</a></li>
   <li><a href="#interpretation" id="toc-interpretation" class="nav-link" data-scroll-target="#interpretation">Interpretation</a></li>
+  <li><a href="#now-its-your-turn" id="toc-now-its-your-turn" class="nav-link" data-scroll-target="#now-its-your-turn">Now it’s your turn!</a>
+  <ul class="collapse">
+  <li><a href="#tweaking-the-parameters" id="toc-tweaking-the-parameters" class="nav-link" data-scroll-target="#tweaking-the-parameters">Tweaking the parameters</a></li>
+  <li><a href="#working-with-your-data" id="toc-working-with-your-data" class="nav-link" data-scroll-target="#working-with-your-data">Working with your data</a></li>
+  </ul></li>
   </ul>
 </nav>
 </div>
@@ -489,6 +494,25 @@ Note
 <span id="cb27-15"><a href="#cb27-15" aria-hidden="true" tabindex="-1"></a><span class="co"># Visualise topics model with LDAvis</span></span>
 <span id="cb27-16"><a href="#cb27-16" aria-hidden="true" tabindex="-1"></a>LDAvis<span class="sc">::</span><span class="fu">serVis</span>(json)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
+</section>
+<section id="now-its-your-turn" class="level2">
+<h2 class="anchored" data-anchor-id="now-its-your-turn">Now it’s your turn!</h2>
+<section id="tweaking-the-parameters" class="level3">
+<h3 class="anchored" data-anchor-id="tweaking-the-parameters">Tweaking the parameters</h3>
+<p>First, try tweaking the parameters used in this report, by changing the value of <code>k</code> (number of topics) on line 222 and <code>n_words</code> (number of words to be included in pseudonaming the topics) on line 233. Then paste the newly generated prompt into ChatGPT. Does the answer make sense? If needed continue the conversation with ChatGPT to refine its answers.</p>
+<p>Note: whenever you make a change in this document, you need to run all code chunks in this document in sequence, from top to bottom.</p>
+</section>
+<section id="working-with-your-data" class="level3">
+<h3 class="anchored" data-anchor-id="working-with-your-data">Working with your data</h3>
+<p>Now, if the method and workflow are clear, you are ready to run the document on your data. You do that as follows:</p>
+<ol type="1">
+<li><p>Update the value of <code>data_choice</code> from <code>"nrc"</code> to <code>"mydata"</code></p></li>
+<li><p>Make sure you have a set of PDFs written in English ready to be used for topic modeling.</p></li>
+<li><p>Create a zip archive of those PDF files.</p></li>
+<li><p>In the files tab of RStudio, click on upload. Navigate to the target directory <code>~/mint2324Q3U/data/mydata</code>, click on <code>Choose File</code> to select the zipped archive you created and click on <code>OK</code>.</p></li>
+<li><p>Run the code chunks in this document from top to bottom to see the results of your analysis.</p></li>
+</ol>
+</section>
 </section>
 
 </main>
