--- a/script.html
+++ b/script.html
@@ -102,8 +102,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <li><a href="#interpretation" id="toc-interpretation" class="nav-link" data-scroll-target="#interpretation">Interpretation</a></li>
   <li><a href="#now-its-your-turn" id="toc-now-its-your-turn" class="nav-link" data-scroll-target="#now-its-your-turn">Now it’s your turn!</a>
   <ul class="collapse">
-  <li><a href="#tweaking-the-parameters" id="toc-tweaking-the-parameters" class="nav-link" data-scroll-target="#tweaking-the-parameters">Tweaking the parameters</a></li>
-  <li><a href="#working-with-your-data" id="toc-working-with-your-data" class="nav-link" data-scroll-target="#working-with-your-data">Working with your data</a></li>
+  <li><a href="#tweaking-the-parameters-of-the-topic-model" id="toc-tweaking-the-parameters-of-the-topic-model" class="nav-link" data-scroll-target="#tweaking-the-parameters-of-the-topic-model">Tweaking the parameters of the topic model</a></li>
+  </ul></li>
+  <li><a href="#working-with-your-data" id="toc-working-with-your-data" class="nav-link" data-scroll-target="#working-with-your-data">Working with your data</a>
+  <ul class="collapse">
+  <li><a href="#exercise-1.-topic-modeling" id="toc-exercise-1.-topic-modeling" class="nav-link" data-scroll-target="#exercise-1.-topic-modeling">Exercise 1. Topic Modeling</a></li>
+  <li><a href="#exercise-2.-visualising-scraped-data" id="toc-exercise-2.-visualising-scraped-data" class="nav-link" data-scroll-target="#exercise-2.-visualising-scraped-data">Exercise 2. Visualising scraped data</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -497,14 +501,17 @@ Note
 </section>
 <section id="now-its-your-turn" class="level2">
 <h2 class="anchored" data-anchor-id="now-its-your-turn">Now it’s your turn!</h2>
-<section id="tweaking-the-parameters" class="level3">
-<h3 class="anchored" data-anchor-id="tweaking-the-parameters">Tweaking the parameters</h3>
+<section id="tweaking-the-parameters-of-the-topic-model" class="level3">
+<h3 class="anchored" data-anchor-id="tweaking-the-parameters-of-the-topic-model">Tweaking the parameters of the topic model</h3>
 <p>First, try tweaking the parameters used in this report, by changing the value of <code>k</code> (number of topics) on line 222 and <code>n_words</code> (number of words to be included in pseudonaming the topics) on line 233. Then paste the newly generated prompt into ChatGPT. Does the answer make sense? If needed continue the conversation with ChatGPT to refine its answers.</p>
 <p>Note: whenever you make a change in this document, you need to run all code chunks in this document in sequence, from top to bottom.</p>
 </section>
-<section id="working-with-your-data" class="level3">
-<h3 class="anchored" data-anchor-id="working-with-your-data">Working with your data</h3>
-<p>Now, if the method and workflow are clear, you are ready to run the document on your data. You do that as follows:</p>
+</section>
+<section id="working-with-your-data" class="level2">
+<h2 class="anchored" data-anchor-id="working-with-your-data">Working with your data</h2>
+<section id="exercise-1.-topic-modeling" class="level3">
+<h3 class="anchored" data-anchor-id="exercise-1.-topic-modeling">Exercise 1. Topic Modeling</h3>
+<p>Now, if the methods and workflows are clear, you are ready to run the document on your data. You do that as follows:</p>
 <ol type="1">
 <li><p>Update the value of <code>data_choice</code> from <code>"nrc"</code> to <code>"mydata"</code></p></li>
 <li><p>Make sure you have a set of PDFs written in English ready to be used for topic modeling.</p></li>
@@ -512,6 +519,10 @@ Note
 <li><p>In the files tab of RStudio, click on upload. Navigate to the target directory <code>~/mint2324Q3U/data/mydata</code>, click on <code>Choose File</code> to select the zipped archive you created and click on <code>OK</code>.</p></li>
 <li><p>Run the code chunks in this document from top to bottom to see the results of your analysis.</p></li>
 </ol>
+</section>
+<section id="exercise-2.-visualising-scraped-data" class="level3">
+<h3 class="anchored" data-anchor-id="exercise-2.-visualising-scraped-data">Exercise 2. Visualising scraped data</h3>
+<p>You’ve been scraping data throughout the workshop. Now it is time to visualise it. Follow the steps from the web scraping tutorial to visualise the Facebook or X data you scraped during the workshop in a word cloud. What do you see? How would you describe the discourse of/about farming communities on social media?</p>
 </section>
 </section>
 
