Update subtitle in slides

--- a/slides.html
+++ b/slides.html
@@ -330,7 +330,7 @@
 
 <section id="title-slide" class="quarto-title-block center">
   <h1 class="title">Farming communities<br>in Dutch media</h1>
-  <p class="subtitle">A Topic Modeling Approach using R</p>
+  <p class="subtitle">Web Scraping &amp; Topic Modeling using R</p>
 
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
