--- a/slides.html
+++ b/slides.html
@@ -352,7 +352,7 @@ Shuyu Zhang
 <ol type="1">
 <li>Tutorial: Scraping data from social media (Shuyu) - 30 min</li>
 <li>Tutorial: Finding topics in Dutch news (Claudiu) - 1 hour</li>
-<li>Exercise: Topic modeling with your own data - 1 hour</li>
+<li>Exercises: Visualising scraped data &amp; topic modeling with your own data - 1 hour</li>
 </ol>
 </section>
 <section id="part-1-scraping-data-from-social-media" class="title-slide slide level1 center" data-background-color="#00A6D6">
@@ -426,7 +426,7 @@ Shuyu Zhang
 </ul>
 </section></section>
 <section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
-<h1>Go to <a href="edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
+<h1>Go to <a href="https://edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
 <p>And log in to RStudio Server with:</p>
 <ul>
 <li>the username from your handout</li>
