--- a/slides.html
+++ b/slides.html
@@ -405,27 +405,32 @@ Shuyu Zhang
 </section>
 <section id="quantitative-analysis" class="slide level2">
 <h2>Quantitative analysis</h2>
-<div>
-<p><b>Pros</b>:</p>
+<p><b>Why?</b>:</p>
 <ul>
-<li class="fragment">Reproducible - re-run the analysis with the same results</li>
-<li class="fragment">Automated - run the analysis on other data</li>
-<li class="fragment">Scalable - run the analysis on (much) more data</li>
+<li>Reproducible - re-run the analysis with the same results</li>
+<li>Automated - run the analysis on other data</li>
+<li>Scalable - run the analysis on (much) more data</li>
 </ul>
-<p><b>Cons</b>:</p>
+<p><b>Good to know:</b>:</p>
 <ul>
-<li class="fragment">Requires knowledge of statistics</li>
-<li class="fragment">Results depend on the amount and quality of data available</li>
+<li>Requires (some) knowledge of statistics</li>
+<li>Results depend on the amount and quality of data available</li>
 </ul>
-</div>
 </section>
 <section id="the-method" class="slide level2">
 <h2>The method</h2>
-<p>Topic modeling using LDA as a way to reveal latent topics inunstructured text data.</p>
+<p>Topic modeling using Latent Dirichlet Allocation (LDA) is a method used to reveal latent topics in unstructured text data.</p>
+<div class="columns">
+<div class="column" style="width:65%;">
+<p><img data-src="fig/lda.png"></p>
+</div><div class="column" style="width:35%;">
+<p>In an LDA model:</p>
 <ul>
 <li>documents are a mixture of topics</li>
 <li>topics are a mixture of words</li>
 </ul>
+</div>
+</div>
 </section></section>
 <section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
 <h1>Go to <a href="https://edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
@@ -440,7 +445,7 @@ Shuyu Zhang
 <h1></h1>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
-<p>Topic Modeling with R</p>
+<p>Web Scraping &amp; Topic Modeling with R</p>
 </div>
 </div>
 </section>
