--- a/slides.html
+++ b/slides.html
@@ -432,6 +432,7 @@ Shuyu Zhang
 </div>
 </div>
 </section></section>
+<section>
 <section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
 <h1>Go to <a href="https://edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
 <p>And log in to RStudio Server with:</p>
@@ -440,15 +441,30 @@ Shuyu Zhang
 <li>the password <b>Rban1smGuest</b></li>
 </ul>
 </section>
-
-<section id="section" class="title-slide slide level1 center">
-<h1></h1>
+<section id="found-this-workshop-useful" class="slide level2 smaller">
+<h2>Found this workshop useful?</h2>
+<p><strong>Reach out to us with questions</strong>:</p>
+<ul>
+<li>Claudiu Forgaci: C.Forgaci@tudelft.nl</li>
+<li>Shuyu Zhang: S-Zhang-19@tudelft.nl</li>
+</ul>
+<p><strong>Follow Rbanism</strong>:</p>
+<ul>
+<li>Sign up for our newsletter: <a href="https://edu.nl/wxx98">edu.nl/wxx98</a></li>
+<li>Follow us on <a href="https://instagram.com/rbanism_">instagram.com/rbanism_</a></li>
+<li>See our website: <a href="https://rbanism.org">rbanism.org</a></li>
+</ul>
+<p><strong>Citation</strong>:</p>
+<ul>
+<li><p>Zhang, S., &amp; Forgaci, C. (2024). <em>What do Facebook or X users say about farming in the Netherlands? - Word cloud analysis using R</em> TU Delft.</p></li>
+<li><p>Forgaci, C. (2024). <em>What do the Dutch news say about farming communities? - A Topic modeling approach using R</em> TU Delft.</p></li>
+</ul>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 <p>Web Scraping &amp; Topic Modeling with R</p>
 </div>
 </div>
-</section>
+</section></section>
     </div>
   </div>
 
