--- a/slides.html
+++ b/slides.html
@@ -347,6 +347,15 @@ Shuyu Zhang
 
   <p class="date">2024-03-20</p>
 </section>
+<section>
+<section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<h1>Go to <a href="https://edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
+<p>And log in to RStudio Server with:</p>
+<ul>
+<li>the username from your handout</li>
+<li>the password <b>Rban1smGuest</b></li>
+</ul>
+</section>
 <section id="workshop-outline" class="slide level2 smaller">
 <h2>Workshop outline</h2>
 <ol type="1">
@@ -354,7 +363,7 @@ Shuyu Zhang
 <li>Tutorial: Finding topics in Dutch news (Claudiu) - 1 hour</li>
 <li>Exercises: Visualising scraped data &amp; topic modeling with your own data - 1 hour</li>
 </ol>
-</section>
+</section></section>
 <section id="part-1-scraping-data-from-social-media" class="title-slide slide level1 center" data-background-color="#00A6D6">
 <h1>Part 1: Scraping data from social media</h1>
 
@@ -383,8 +392,8 @@ Shuyu Zhang
 <h2>What is web scraping?</h2>
 <p>Web scraping is the process of extracting data from websites. It involves automated techniques to collect information from web pages or social media website, typically in formats such as HTML, XML, or JSON. Web scraping allows you to retrieve specific data elements, such as text, images, or tables, from web pages and store them for analysis or other purposes.</p>
 </section></section>
-<section id="part-2-finding-topics-in-dutch-news" class="title-slide slide level1 center" data-background-color="#00A6D6">
-<h1>Part 2: Finding topics in Dutch news</h1>
+<section id="part-2-finding-topics-in-the-dutch-news" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<h1>Part 2: Finding topics in the Dutch news</h1>
 
 </section>
 
@@ -431,15 +440,6 @@ Shuyu Zhang
 </ul>
 </div>
 </div>
-</section></section>
-<section>
-<section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
-<h1>Go to <a href="https://edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
-<p>And log in to RStudio Server with:</p>
-<ul>
-<li>the username from your handout</li>
-<li>the password <b>Rban1smGuest</b></li>
-</ul>
 </section>
 <section id="found-this-workshop-useful" class="slide level2 smaller">
 <h2>Found this workshop useful?</h2>
