--- a/slides.html
+++ b/slides.html
@@ -414,13 +414,13 @@ Shuyu Zhang
 </section>
 <section id="quantitative-analysis" class="slide level2">
 <h2>Quantitative analysis</h2>
-<p><b>Why?</b>:</p>
+<p><b>Why?</b></p>
 <ul>
 <li>Reproducible - re-run the analysis with the same results</li>
 <li>Automated - run the analysis on other data</li>
 <li>Scalable - run the analysis on (much) more data</li>
 </ul>
-<p><b>Good to know:</b>:</p>
+<p><b>Good to know:</b></p>
 <ul>
 <li>Requires (some) knowledge of statistics</li>
 <li>Results depend on the amount and quality of data available</li>
