--- a/slides.html
+++ b/slides.html
@@ -34,6 +34,7 @@
   </style>
   <link rel="stylesheet" href="slides_files/libs/revealjs/dist/theme/quarto.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="logo.css">
   <link href="slides_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="slides_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="slides_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
@@ -328,7 +329,7 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" class="quarto-title-block center">
+<section id="title-slide" data-background-color="#00A6D6" class="quarto-title-block center">
   <h1 class="title">Farming communities<br>in Dutch media</h1>
   <p class="subtitle">Web Scraping &amp; Topic Modeling using R</p>
 
@@ -347,7 +348,15 @@ Shuyu Zhang
 
   <p class="date">2024-03-20</p>
 </section>
-<section>
+<section id="workshop-outline" class="title-slide slide level1 smaller center" data-background-color="#00A6D6">
+<h1>Workshop outline</h1>
+<ol type="1">
+<li>Tutorial: Scraping data from social media (Shuyu) - 30 min</li>
+<li>Tutorial: Finding topics in Dutch news (Claudiu) - 1 hour</li>
+<li>Exercises: Visualising scraped data &amp; topic modeling with your own data - 1 hour</li>
+</ol>
+</section>
+
 <section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
 <h1>Go to <a href="https://edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
 <p>And log in to RStudio Server with:</p>
@@ -356,20 +365,13 @@ Shuyu Zhang
 <li>the password <b>Rban1smGuest</b></li>
 </ul>
 </section>
-<section id="workshop-outline" class="slide level2 smaller">
-<h2>Workshop outline</h2>
-<ol type="1">
-<li>Tutorial: Scraping data from social media (Shuyu) - 30 min</li>
-<li>Tutorial: Finding topics in Dutch news (Claudiu) - 1 hour</li>
-<li>Exercises: Visualising scraped data &amp; topic modeling with your own data - 1 hour</li>
-</ol>
-</section></section>
-<section id="part-1-scraping-data-from-social-media" class="title-slide slide level1 center" data-background-color="#00A6D6">
+
+<section id="part-1-scraping-data-from-social-media" class="title-slide slide level1 center" data-background-color="#009B77">
 <h1>Part 1: Scraping data from social media</h1>
 
 </section>
 
-<section id="the-question" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<section id="the-question" class="title-slide slide level1 center" data-background-color="#009B77">
 <h1>The question</h1>
 <p>What are the main farming-related topics discussed in social media?</p>
 </section>
@@ -384,7 +386,7 @@ Shuyu Zhang
 <p>In the digital media era, social media platforms and websites serve as valuable sources for collecting user-generated content, which in turn represents the voices and opinions of citizens. Twitter (X)’s real-time nature and vast array of tweets cover diverse topics, providing insights into current events, public reactions, and emerging trends. Similarly, Facebook’s extensive user base and features like status updates and comments offer rich data on user experiences and interactions.</p>
 </section></section>
 <section>
-<section id="the-approach" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<section id="the-approach" class="title-slide slide level1 center" data-background-color="#009B77">
 <h1>The approach</h1>
 <p>Web scraping using the Chrome extension<br><b><a href="https://southampton.ac.uk/~lac/WebDataResearchAssistant/">Web Data Research Assistant</a></b></p>
 </section>
@@ -392,12 +394,17 @@ Shuyu Zhang
 <h2>What is web scraping?</h2>
 <p>Web scraping is the process of extracting data from websites. It involves automated techniques to collect information from web pages or social media website, typically in formats such as HTML, XML, or JSON. Web scraping allows you to retrieve specific data elements, such as text, images, or tables, from web pages and store them for analysis or other purposes.</p>
 </section></section>
-<section id="part-2-finding-topics-in-the-dutch-news" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<section id="application-in-rstudio" class="title-slide slide level1 center" data-background-color="#009B77">
+<h1>Application in RStudio</h1>
+<p>Open <strong><code>script_socialmedia.qmd</code></strong><br> and follow the instructions there</p>
+</section>
+
+<section id="part-2-finding-topics-in-the-dutch-news" class="title-slide slide level1 center" data-background-color="#0076C2">
 <h1>Part 2: Finding topics in the Dutch news</h1>
 
 </section>
 
-<section id="the-question-1" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<section id="the-question-1" class="title-slide slide level1 center" data-background-color="#0076C2">
 <h1>The question</h1>
 <p>What are the main farming-related topics discussed in Dutch news since 2022?</p>
 </section>
@@ -408,7 +415,7 @@ Shuyu Zhang
 </section>
 
 <section>
-<section id="the-approach-1" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<section id="the-approach-1" class="title-slide slide level1 center" data-background-color="#0076C2">
 <h1>The approach</h1>
 <p>Quantitative analysis:<br>Topic modeling</p>
 </section>
@@ -440,6 +447,11 @@ Shuyu Zhang
 </ul>
 </div>
 </div>
+</section></section>
+<section>
+<section id="application-in-rstudio-1" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<h1>Application in RStudio</h1>
+<p>Open <strong><code>script.qmd</code></strong><br> and follow the instructions there</p>
 </section>
 <section id="found-this-workshop-useful" class="slide level2 smaller">
 <h2>Found this workshop useful?</h2>
