--- a/slides.html
+++ b/slides.html
@@ -360,7 +360,7 @@ Shuyu Zhang
 </section>
 
 <section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
-<h1>Go to <a href="https://edu.nl/ph3a6">edu.nl/ph3a6</a></h1>
+<h1>Go to <a href="https://edu.nl/ph3a6" target="_blank">edu.nl/ph3a6</a></h1>
 <p>And log in to RStudio Server with:</p>
 <ul>
 <li>the username from your handout</li>
