--- a/slides.html
+++ b/slides.html
@@ -359,13 +359,19 @@ Shuyu Zhang
 </ol>
 </section>
 
-<section id="go-to-edu.nlph3a6" class="title-slide slide level1 center" data-background-color="#00A6D6">
-<h1>Go to <a href="https://edu.nl/ph3a6" target="_blank">edu.nl/ph3a6</a></h1>
-<p>And log in to RStudio Server with:</p>
+<section id="setup" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<h1>Setup</h1>
+<ol type="1">
+<li>Log in to RStudio Server at <strong><a href="https://edu.nl/ph3a6" target="_blank">edu.nl/ph3a6</a></strong> with</li>
+</ol>
 <ul>
 <li>the username from your handout</li>
 <li>the password <b>Rban1smGuest</b></li>
 </ul>
+<ol start="2" type="1">
+<li><p>Open <strong><a href="https://edu.nl/qh34g" target="_blank">edu.nl/qh34g</a></strong> in a new tab</p></li>
+<li><p>When you are ready put a green sticky note on your laptop and follow the instructions on the presenter’s screen</p></li>
+</ol>
 </section>
 
 <section id="part-1-scraping-data-from-social-media" class="title-slide slide level1 center" data-background-color="#009B77">
