--- a/slides.html
+++ b/slides.html
@@ -457,7 +457,7 @@ Shuyu Zhang
 </div>
 </section></section>
 <section>
-<section id="application-in-rstudio-1" class="title-slide slide level1 center" data-background-color="#00A6D6">
+<section id="application-in-rstudio-1" class="title-slide slide level1 center" data-background-color="#0076C2">
 <h1>Application in RStudio</h1>
 <p>Open <strong><code>script.qmd</code></strong><br> and follow the instructions there</p>
 </section>
