--- a/script.html
+++ b/script.html
@@ -183,7 +183,7 @@ Note
 <section id="software" class="level3">
 <h3 class="anchored" data-anchor-id="software">Software</h3>
 <ol type="1">
-<li><p>During the workshop, we work in RStudio Server, a version of RStudio that is accessible through your web browser, so no installation is required. Visit <a href="http://rstudio-server-edu.bk.tudelft.nl:8787/">RStudio Server</a> and log in with the credentials provided in your handout. To follow the steps described in this document after the workshop, you will need to install <a href="https://posit.co/download/rstudio-desktop/">R, RStudio Desktop</a> and <a href="https://www.python.org/downloads/">Python</a> for your operating system.</p></li>
+<li><p>During the workshop, we work in RStudio Server, a version of RStudio that is accessible through your web browser, so no installation is required. Visit <a href="http://rstudio-server-edu.bk.tudelft.nl:8787/">RStudio Server</a> and log in with the credentials provided in your handout. To follow the steps described in this document after the workshop, you will need to install <a href="https://posit.co/download/rstudio-desktop/">R, RStudio Desktop</a>, <a href="https://www.python.org/downloads/">Python</a> and <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git">git</a> for your operating system.</p></li>
 <li><p>If you haven’t created an RStudio project with the workshop material yet, create it from <code>File &gt; New Project... &gt; Version Control &gt; Git</code> with the URL <code>https://github.com/cforgaci/mint2324Q3U.git</code> and project directory name <code>mint2324Q3U</code>. Browse to a location of your choice on your computer and click on <code>Create Project</code>. This will create a project directory populated with the data and scripts used in the workshop.</p></li>
 <li><p>Open the file <code>script.qmd</code> from the Files tab in Rstudio. This will open the computational notebook from where this document was rendered. Activate the visual editor as shown below and continue reading there.</p></li>
 </ol>
@@ -524,7 +524,7 @@ How would you name these topics? Use maximum two words to name the topics and pr
 <h2 class="anchored" data-anchor-id="now-its-your-turn">Now it’s your turn!</h2>
 <p>Now you are ready to run the document on your own data. You do that as follows:</p>
 <ol type="1">
-<li><p>In the Files tab, the file <code>script_mydata.qmd</code>. This identical to <code>script.qmd</code>, except that the value of <code>data_choice</code> was changed from <code>"nrc"</code> to <code>"mydata"</code> and the NRC-specific stop words were removed from <code>stop_words_custom</code>. Make sure you are in that copied file.</p></li>
+<li><p>In the Files tab, open the file <code>script_mydata.qmd</code>. This is identical to <code>script.qmd</code>, except that the value of <code>data_choice</code> was changed from <code>"nrc"</code> to <code>"mydata"</code> and the NRC-specific stop words were removed from <code>stop_words_custom</code>. Make sure you are in that copied file.</p></li>
 <li><p>In the <code>Environment</code> tab, click on the broom icon to make sure you have a clean workspace (no conflicting data from the previous exercise).</p></li>
 <li><p>Make sure you have a set of PDFs written in English ready to be used for topic modeling.</p></li>
 <li><p>Create a zip archive of those PDF files.</p></li>
